<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.richellerazon.nytsearch.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="YYYYMMDD"
        android:id="@+id/tvDate"
        android:layout_below="@+id/tvBeginDate"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:id="@+id/btnChangeDate"
        android:layout_below="@+id/tvDate"
        android:layout_centerHorizontal="true"
        android:onClick="showDatePickerDialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:layout_below="@+id/btnChangeDate"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/spSortOrder"
        android:layout_below="@+id/tvSortOrder"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/news_desk_values"
        android:id="@+id/tvNewsDeskValues"
        android:layout_below="@+id/spSortOrder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvNewsDeskValues"
        android:columnCount="2">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art"
            android:id="@+id/cbArt"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cars"
            android:id="@+id/cbCars"
             />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dining"
            android:id="@+id/cbDining"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/cbSports"
             />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_marginBottom="84dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
